# enterprise-network-analytics

./: .env.example  .gitignore  Dockerfile  README.md  README_vi.md  claude.md  docker-compose.yml  package.json  pyproject.toml  quick-start.md  requirements-windows.txt  seed_gleif.py  test_api.py
.github/skills/dashboard-ui/: SKILL.md
.github/skills/dashboard-ui/references/: tailwind-setup.md
ai/: entity_extraction.py  graph_embedding.py  llm_integration.py  relationship_extractor.py
analytics/fraud_detection/: rule_based.py
analytics/ownership/: cross_ownership.py
analytics/risk/: risk_scoring.py
analytics/supply_chain/: analysis.py
api/: main.py
api/routes/: ai_api.py  ai_api.py.patch  analytics.py  companies.py  crawl_api.py  graph_api.py
config/: ai_keys_cache.json  kafka_config.py  neo4j_config.py  settings.py  spark_config.py
crawler_outputs/: gleif_crawl_sample_20260413_073614.json  gleif_crawl_sample_20260413_073624.json  gleif_crawl_sample_manual_20260413.json  gleif_data.json  my_gleif_run.json
data/schemas/: enterprise_schemas.py
docs/: cmd  idea-analysis-enterprise.md  nginx-api-gateway.conf  quick-start.md  submission-checklist-1page.md  vps-setup.md
graph/: graph_queries.py  neo4j_loader.py
graph/algorithms/: graph_algorithms.py
ingestion/: batch_ingestion.py  kafka_consumer.py  kafka_producer.py
ingestion/crawlers/: __init__.py  base_crawler.py  crawl4ai_company_pages.py  crawler_pipeline.py  finnhub_crawler.py  gleif.py  news_intelligence.py  opencorporates.py  openownership.py  opensanctions.py  vietnam_nbr.py  worldbank.py  yfinance_crawler.py
pipeline/: batch_pipeline.py  crawl_etl_pipeline.py  streaming_pipeline.py
pipeline/orchestration/airflow_dags/: enterprise_network_dag.py
processing/spark_jobs/: company_etl.py  panama_dataset_etl.py  relationship_etl.py
processing/transformers/: __init__.py  data_transformer.py
scripts/: crawl_gleif_sample.py  demo_spark_log.py  load_crawl_json_to_neo4j.py  load_panama_to_neo4j.py  start.sh  stop.sh
tests/: test_ai_graphrag.py  test_analytics.py  test_graph.py  test_phase2.py
ui/: .env.example  .gitignore  index.html  make_graph.py  package-lock.json  package.json  start.sh
ui/crawler_outputs/: gleif_crawl_sample_20260413_073340.json
ui/src/: App.css  App.tsx  i18n.ts  index.css
ui/src/components/: AIAssistant.tsx  AlertsRisk.tsx  CrawlManager.tsx  ExecutiveDashboard.tsx  GraphExplorer.tsx  Settings.tsx
ui/src/services/: api.ts
