[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-network-analytics"
version = "0.1.0"
description = "Phân tích mạng lưới doanh nghiệp với PySpark, Neo4j và Kafka"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.1",
    "delta-spark==3.1.0",
    "confluent-kafka[avro,schemaregistry]==2.4.0",
    "fastavro==1.9.4",
    "neo4j==5.19.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "scikit-learn==1.5.0",
    "networkx==3.3",
    "node2vec==0.4.6",
    "mlflow==2.13.0",
    "openai==1.30.1",
    "langchain==0.2.3",
    "langchain-community==0.2.3",
    "langchain-openai==0.1.8",
    "pandas==2.2.2",
    "pyarrow==16.0.0",
    "boto3==1.34.100",
    "python-dotenv==1.0.1",
    "loguru==0.7.2",
    "tenacity==8.3.0",
    "tqdm==4.66.4",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "ruff==0.4.5",
    "mypy==1.10.0",
    "ipykernel==6.29.4",
    "jupyterlab==4.2.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
