[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-network-analytics"
version = "0.1.0"
description = "Phân tích mạng lưới doanh nghiệp với PySpark, Neo4j và Kafka"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.1",
    "delta-spark==3.1.0",
    "confluent-kafka[avro,schemaregistry]==2.4.0",
    "fastavro==1.9.4",
    "neo4j==5.19.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.2.1",
    "scikit-learn==1.5.0",
    "networkx==3.3",
    "mlflow==2.13.0",
    "openai>=2.8.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "pandas==2.2.2",
    "pyarrow==15.0.2",
    "boto3==1.34.100",
    "python-dotenv==1.0.1",
    "loguru==0.7.2",
    "tenacity==8.3.0",
    "tqdm==4.66.4",
    "httpx>=0.27.2",
    "crawl4ai>=0.8.0",
    "aiohttp>=3.11.11",
    "aiolimiter==1.1.0",
    "backoff==2.2.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "fake-useragent>=2.0.3",
    "cachetools>=5.3.3",
    "orjson>=3.10.3",
    "playwright>=1.49.0",
    "spacy>=3.7.0",
    "groq>=0.9.0",
    "tavily-python>=0.5.0",
]

[project.optional-dependencies]
ai = [
    "node2vec==0.4.6",
    "networkx>=2.8,<3.0",
]
dev = [
    "pytest==8.2.1",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "ruff==0.4.5",
    "mypy==1.10.0",
    "ipykernel==6.29.4",
    "jupyterlab==4.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["ai", "analytics", "api", "config", "data", "graph", "ingestion", "pipeline", "processing"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
